--- a/src/components/Layout/Header/Header.module.css
+++ b/src/components/Layout/Header/Header.module.css
@@ -1,19 +1,21 @@
 .header {
     width: 100%;
+    height: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff
+    background-color: #445E6B;
+    text-align: center;
 }
 
 .logo {
     width: 2.5rem;
     height: auto;
     padding: 0.75rem;
-
 }
 
-.header-title {
+.headerTitle {
     font-size: 1.5rem;
-    
+    color: #fff;
+    font-family: Pacifico, cursive;
 }
