--- a/src/components/Layout/Footer/Footer.module.css
+++ b/src/components/Layout/Footer/Footer.module.css
@@ -7,4 +7,11 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    left: 0;
+    width: 4rem;
+    height: calc(100vh - 4rem);
+    flex-direction: column;
+  }
 }
