--- a/src/components/FormRegister/FormRegister.module.css
+++ b/src/components/FormRegister/FormRegister.module.css
@@ -8,17 +8,35 @@
     align-items: center;
     border-radius: 1rem;
     box-shadow: 0.5rem 0.5rem 0.5rem rgb(0, 0, 0, 0.25);
-    padding: 1rem;
+    padding: 2rem 0.5rem;
+    position: relative;
+    margin-top: 2rem;
 }
 
 .PawRegister {
-    border: 0.25rem;
+    border: 0.25rem solid white;
     background-color: var(--laranja);
     border-radius: 100%;
+    position: absolute;
+    top: -6%;
 }
 
 .formFields {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.headTitle {
+    padding: 1rem;
+    color: var(--laranja);
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    text-align: center;
 }
