--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -8,13 +8,18 @@
     border: 0.1rem solid gray;
     border-radius: 1rem;
     box-shadow: 0.5rem 0.5rem 0.5rem rgb(0, 0, 0, .15);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .imagePost {
-    width: 100%;
-    max-width: 25rem;
-    height: 100%;
+    width: 15rem;
+    height: 12rem;
     max-height: 20rem;
     background-color: gray;
     border-radius: .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
