--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,3 +41,11 @@ html {
     background-color: var(--bege);
     font-family: RobotoRegular, Verdana, Tahoma, sans-serif;
 }
+
+.error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb;
+    padding: 5px;
+    border-radius: 5px;
+}
