--- a/src/components/StructurePage/StructurePage.module.css
+++ b/src/components/StructurePage/StructurePage.module.css
@@ -4,5 +4,14 @@
     gap: 1.5rem;
     justify-content: center;
     align-items: center;
+    margin-left: 4rem;
+    margin-top: 4rem;
     padding: 2rem;
 }
+
+@media screen and (max-width: 767px) {
+    .main {
+        margin-left: 0rem;
+        margin-top: 4rem;
+    }
+  }
