--- a/src/components/FormLogin/FormLogin.module.css
+++ b/src/components/FormLogin/FormLogin.module.css
@@ -8,7 +8,7 @@
     align-items: center;
     border-radius: 1rem;
     box-shadow: 0.5rem 0.5rem 0.5rem rgb(0, 0, 0, 0.25);
-    padding: 2rem 0.5rem;
+    padding: 2rem 2.5em;
     position: relative;
     margin-top: 2rem;
 }
