--- a/src/components/Layout/Footer/Footer.module.css
+++ b/src/components/Layout/Footer/Footer.module.css
@@ -7,8 +7,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-bottom: 0; /* Remove a margem inferior padrão */
-  z-index: 1000; /* Certifique-se de que o z-index seja maior que o z-index do StructurePage */
+  margin-bottom: 0; 
+  z-index: 1000;
 }
 
 @media screen and (min-width: 768px) {
