--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -4,14 +4,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-width: 80vw;
 }
 
-.dashboard h2 {
+.dashboard h1 {
     font-size: 2.2em;
     margin-bottom: 0.5em;
 }
 
-.dashboard p {
+.description {
     color: #aaa;
     margin-bottom: 1em;
 }
@@ -32,8 +33,7 @@
     display: flex;
     justify-content: space-between;
     font-weight: bold;
-    border-bottom: 2px solid #ccc;
-    width: 80%;
+    width: 100%;
     padding: 10px;
 }
 
@@ -41,9 +41,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-top: 2px solid #ccc;
     border-bottom: 1px solid #eee;
-    width: 80%;
     padding: 10px;
+    width: 100%;
 }
 
 .post_row p {
@@ -52,8 +53,50 @@
 
 .post_row button,
 .post_row a {
-    margin: 0 5px;
-    height: 30px;
-    width: 100px;
-    font-size: 0.7em;
+    font-size: 0.75em;
+}
+
+.actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.btn-outline {
+    background-color: transparent;
+    color: #000;
+    padding: .5rem 1rem ;
+    width: 2.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: .5rem;
+    border: 1px solid #aaa;
+    transition: background-color 0.3s ease;
+}
+
+.btn-outline:hover {
+    background-color: var(--azul-escuro);
+    color: #fff;    
+}
+
+.btn-danger{
+    background-color: transparent;
+    padding: .5rem 1rem ;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+    font-weight: bold;
+    border: 1px solid #aaa;
+    transition: background-color 0.3s ease;
+    transition: color 0.3s ease;
+}
+
+.btn-danger:hover {
+    background-color: #dc3545;
+    color: #fff;
+}
+
+a {
+    text-decoration: none;
 }
